<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="184dp"
        android:layout_height="33dp"
        android:text="Description"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="540dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="421dp"
        android:layout_height="343dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mainpage" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="189dp"
        android:layout_height="25dp"
        android:text="@string/txtv1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="353dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="387dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="28dp"
        android:text="@string/txtv2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="440dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="252dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="@string/passw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="477dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="250dp"
        android:layout_height="78dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="@string/desctxt"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="579dp" />

</androidx.constraintlayout.widget.ConstraintLayout>